Fix footer menu flicker

--- a/components/layout/footer.module.scss
+++ b/components/layout/footer.module.scss
@@ -12,6 +12,10 @@
 
 .footer_nav {
   padding: var(--space-24) 0 var(--space-60) 0;
+
+  @include breakpoint(sm) {
+    display: none;
+  }
 }
 
 .footer_nav_item {
